[metadata]
name = photogrammetry-photos-pipeline
version = 0.1.0
author = Alexandre Masselot
author_email = alexandre.masselot@gmail.com
description = Prepare photos for a photogrammetry assembly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-submersa/photogrammetry-photos-pipeline
project_urls =
    Bug Tracker = https://github.com/terra-submersa/photogrammetry-photos-pipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    coordinates-label-photos
    argparse
    tqdm
    image_dehazer
    piexif
[options.packages.find]
where = src

