[metadata]
name = photogrammetry-photos-pipeline
version = 0.1.3
author = Alexandre Masselot
author_email = alexandre.masselot@gmail.com
description = Prepare photos for a photogrammetry assembly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-submersa/photogrammetry-photos-pipeline
project_urls =
    Bug Tracker = https://github.com/terra-submersa/photogrammetry-photos-pipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    coordinates-label-photos
    tqdm==4.64.0
    numpy==1.23.2
    piexif==1.1.3
[options.packages.find]
where = src

